Fixed issue with legend hiding completely on small screens, jockeyed space to make map bigger and legend appear more often, restored binding to checklist after BBEA updates

--- a/docs/css/imerss-viz-story.css
+++ b/docs/css/imerss-viz-story.css
@@ -163,7 +163,7 @@
     width: 8rem;
     margin-left: 6px;
     position: relative;
-    top: -2px;
+    top: 1px;
 }
 
 .imerss-selected .imerss-legend-preview {
