--- a/docs/css/xetthecum.css
+++ b/docs/css/xetthecum.css
@@ -243,9 +243,10 @@ audio {
 }
 
 .imerss-legend-preview {
-    width: 32px;
-    height: 32px;
-    background-size: 72px;
+    width: 28px;
+    height: 28px;
+    background-size: 64px;
+    background-position-y: 28px;
     /** Override silly definition from imerss-viz-scrolly.css - need to remove dependence **/
     top: 0px;
     margin: 3px;
@@ -273,8 +274,8 @@ audio {
     pointer-events: all;
 }
 
-@media screen and ( max-height: 764px ) {
-    .mxcw-legend {
+@media screen and ( max-height: 560px ) {
+    .mxcw-map-holder .mxcw-legend {
         display: none
     }
 }
@@ -284,6 +285,15 @@ audio {
  */
 .nav-tabs .nav-link.active, .nav-tabs .nav-link.active:focus, .nav-tabs .nav-link.active:hover, .nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-item.open .nav-link:focus, .nav-tabs .nav-item.open .nav-link:hover {
     color: #5a5244;
+}
+
+.nav-footer {
+    min-height: initial;
+}
+
+.nav-footer .nav-footer-center {
+    min-height: 1em;
+    margin-top: 0;
 }
 
 #map-svg {
